--- a/files/paper.bib
+++ b/files/paper.bib
@@ -5,3 +5,18 @@
       year={2024},
 }
 
+@INPROCEEDINGS{Active,
+      title={Learning to Double Guess: An Active Perception Approach for Estimating the Center of Mass of Arbitrary Object}, 
+      booktitle={Submitted to ICRA25},
+      author={Shengmiao Jin and Yuchen Mo and Wenzhen Yuan},
+      year={2025},
+      keywords  = {undereview}
+}
+
+@INPROCEEDINGS{DoorBot,
+      title={DoorBot: Closed-Loop Task Planning and Manipulation for Door Opening in the Wild with Haptic Feedback}, 
+      booktitle={Submitted to ICRA25},
+      author={Zhi Wang$^*$ and Yuchen Mo$^*$ and Shengmiao Jin and Wenzhen Yuan},
+      year={2025},
+      keywords  = {undereview}
+}
